--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "paxada",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "description": "",
   "main": "dist/index.js",
   "scripts": {
     "test": "jest --coverage",
-    "start": "tsc && node dist/index.js",
+    "build": "tsc",
+    "start": "npm run build && node dist/index.js",
     "dev": "concurrently -k -n \"Typescript,Node\" -p \"[{name}]\" -c \"blue,green\" \"tsc --watch\" \"nodemon\"",
     "prepare": "tsc",
     "prepublishOnly": "npm test",
@@ -15,21 +16,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/fs-extra": "^9.0.1",
+    "commander": "^6.0.0",
     "fs-extra": "^9.0.1",
-    "glob": "^7.1.6",
     "openapi3-ts": "^1.4.0"
   },
   "devDependencies": {
+    "@types/fs-extra": "^9.0.1",
     "@types/jest": "^26.0.9",
     "concurrently": "^5.2.0",
     "jest": "^26.2.2",
     "nodemon": "^2.0.4",
     "ts-jest": "^26.1.4",
     "typescript": "^3.9.7"
-  },
-  "bin": {
-    "paxada": "dist/index.js"
   },
   "types": "dist/index.d.ts"
 }
