--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,5 +4,6 @@
     "module": "commonjs",
     "outDir": "dist",
     "declaration": true
-  }
+  },
+  "exclude": ["template", "node_modules", "dist"]
 }
