--- a/package.json
+++ b/package.json
@@ -29,5 +29,8 @@
     "ts-jest": "^26.1.4",
     "typescript": "^3.9.7"
   },
+  "bin": {
+    "paxada": "dist/index.js"
+  },
   "types": "dist/index.d.ts"
 }
