--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,5 +5,5 @@
     "outDir": "dist",
     "declaration": true
   },
-  "exclude": ["template", "node_modules", "dist"]
+  "exclude": ["**/templates/*", "node_modules", "dist"]
 }
