--- a/src/templates/Project/package.json
+++ b/src/templates/Project/package.json
@@ -48,6 +48,8 @@
         "morgan": "^1.10.0",
         "sjoa-builder": "^1.0.5",
         "socket.io": "^2.3.0",
+        "tiny-typed-emitter": "^2.0.2",
+        "typedi": "^0.8.0",
         "socket.io-redis": "^5.3.0",
         "swagger-ui-express": "^4.1.4",
         "winston": "^3.3.3"
