--- a/src/templates/Project/tsconfig.json
+++ b/src/templates/Project/tsconfig.json
@@ -1,6 +1,7 @@
 {
     "compilerOptions": {
         "module": "commonjs",
+        "experimentalDecorators": true,
         "esModuleInterop": true,
         "outDir": "dist",
         "target": "ESNext",
