--- a/.npmignore
+++ b/.npmignore
@@ -7,3 +7,4 @@ tslint.json
 !dist/templates/Project/tslint.json
 !dist/templates/Project/.prettierrc
 !dist/templates/Project/.gitignore
+!dist/templates/Project/.env
