--- a/src/templates/Project/package.json
+++ b/src/templates/Project/package.json
@@ -75,7 +75,9 @@
         "nodemon": "^2.0.4",
         "prettier": "^2.0.5",
         "ts-jest": "^26.1.4",
-        "typescript": "^3.9.7"
+        "typescript": "^3.9.7",
+        "supertest": "^4.0.2",
+        "@types/supertest": "^2.0.10"
     },
     "lint-staged": {
         "*.{ts,tsx,js,jsx}": [
