fix post/put route

--- a/.npmignore
+++ b/.npmignore
@@ -8,3 +8,6 @@ tslint.json
 !dist/templates/Project/.prettierrc
 !dist/templates/Project/.gitignore
 !dist/templates/Project/.env
+!dist/templates/Project/.eslintignore
+!dist/templates/Project/.eslintrc
+!dist/templates/Project/.prettierrc
