--- a/src/templates/Project/package.json
+++ b/src/templates/Project/package.json
@@ -49,6 +49,7 @@
         "sjoa-builder": "^1.0.5",
         "socket.io": "^2.3.0",
         "tiny-typed-emitter": "^2.0.2",
+        "reflect-metadata": "^0.1.13",
         "typedi": "^0.8.0",
         "socket.io-redis": "^5.3.0",
         "swagger-ui-express": "^4.1.4",
