--- a/src/templates/Project/model.env
+++ b/src/templates/Project/model.env
@@ -4,4 +4,4 @@ MONGODB_URI_TEST=mongodb://127.0.0.1:27017/DatabaseTest
 REDIS_URL=
 PORT=5000
 DOCUMENTATION_USER=
-DOCUMENTATION_PASSWORD=NODE_ENV=DEV
+DOCUMENTATION_PASSWORD=
